    obey StartupNotify when opening with desktop app
    configure.ac set G_LOG_DOMAIN
    fix main.c debug_gdk_threads_leave
    change detection blacklist detect new files #478 #582
    get mime type of only reg and link files, not char dev
    fix segfault in ptk_bookmark_view_reload_list to vfs_load_icon
    prevent filesystem find loop hang in new file/folder dialog #601
1.0.4   2015-10-17:
    new spacefm-installer replaces self-extrct and install #571
    README rewritten and manual updated for new installer #571
    ifdef malloc_trim for non GlibC libraries #574
    fix HAL build #576; fix older GTK2 build
    Menu and Shift+F10 show side pane menus #575
    Design Menu shown with Menu key in addition to F2 #575
    dir tree allow keyboard navigation, keep focus #541 #575
    dir tree double-click expands/collapses row #542 #575
    dir tree context menu|New|Tab Here opens selected dir
    correct location for import GTK3 bookmarks; use basename #573
    dont continuously refresh copying video thumbnails #508
    new in /etc/spacefm/spacefm.conf: terminal_su and graphical_su #516
    build system now installs /etc/spacefm/spacefm.conf
    new configure option --sysconfdir=/etc to set location of /etc
    add new event for tab change dir evt_tab_chdir; update manual
    replace show-menu socket method with activate for all item types
    [Dialog] add non-visible element --click to run cmd on click #572
    [Dialog] fix some internal var names always set to %v #572
    increase max icon/thumbnail size from 256x256 to 512x512
    [Debian] control libffmpegthumbnailer4 | libffmpegthumbnailer4v5 #583
    [GTK3] fix wrong colors with dark variant of GTK themes #578
1.0.3   2015-08-26:
    add Devices|Settings|Auto-Mount|Mount Dirs option #548
    proto hand keep %a for lxterminal urxvtc konsole gnome-terminal #552
    convert non-latin keycodes to latin #57
    lang add ltg; update it lt pt_BR
    configure.ac define G_DISABLE_ASSERT to disable g_assert